# ssai-ksdesktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CODEX_SPEC.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: advertisers.ts  client.ts
src/api/__tests__/: advertisers.test.ts
src/store/: useAdvertisersStore.ts
src/styles/: global.css
src/types/: advertisers.ts
src/views/: MainPage.tsx
