[package]
name = "ssai-ksdesktop"
version = "1.0.0"
description = "SSAI 快手监控"
authors = ["Codex"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ssai_ksdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
